objects/trailheadapp__Trailmix__c.object
<CustomObject>
    <description>Available Trailhead Trailmixes.</description>
    <fields>
        <fullName>trailheadapp__Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Created_At__c</fullName>
        <label>Created At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Created_By_Profile__c</fullName>
        <label>Created By Profile</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Creator_TH_SFID__c</fullName>
        <inlineHelpText>THIS FIELD IS NO LONGER REQUIRED. EDIT THE PROPERTIES FOR THIS FIELD ON THE PAGE LAYOUT AND UNHECK THE REQUIRED BOX.</inlineHelpText>
        <label>Created By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>trailheadapp__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Slug__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__URL__c</fullName>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <label>Trailmix</label>
    <listViews>
        <fullName>trailheadapp__All</fullName>
        <columns>NAME</columns>
        <columns>trailheadapp__External_Id__c</columns>
        <columns>trailheadapp__URL__c</columns>
        <columns>trailheadapp__Creator_TH_SFID__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Trailmix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailmixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>